extends Node

@onready var choose: AudioStreamPlayer = $choose
@onready var confirm: AudioStreamPlayer = $confirm
@onready var ui: AudioStreamPlayer = $ui
@onready var slice: AudioStreamPlayer = $slice
@onready var runaway: AudioStreamPlayer = $runaway
@onready var logo: AudioStreamPlayer = $logo
@onready var hit: AudioStreamPlayer = $hit
@onready var heal: AudioStreamPlayer = $heal
@onready var heartbeatbreaker: AudioStreamPlayer = $heartbeatbreaker
@onready var heartsplosion: AudioStreamPlayer = $heartsplosion
@onready var monster: AudioStreamPlayer = $monster
@onready var sans: AudioStreamPlayer = $sans
@onready var encounter_1: AudioStreamPlayer = $encounter_1
@onready var encounter_2: AudioStreamPlayer = $encounter_2
@onready var encounter_3: AudioStreamPlayer = $encounter_3
@onready var gasterintro: AudioStreamPlayer = $gasterintro
@onready var gasterfire: AudioStreamPlayer = $gasterfire
